--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ install:
   - composer install
 
 before_script:
+  - composer self-update
+  - composer install --prefer-source --no-interaction --dev
   - ./vendor/bin/codecept build
 
 script:
