--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,4 @@ after_success:
   - bash <(curl -s https://codecov.io/bash)
 
 script:
-  - ./vendor/bin/codecept run --coverage --coverage-xml --converage-html
+  - ./vendor/bin/codecept run --coverage --coverage-xml --coverage-html
