--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "joseph-montanez/phpcartload",
   "description": "Standalone shopping cart",
   "minimum-stability": "dev",
-  "license": "AGPL-3.0",
+  "license": "MIT",
   "authors": [
     {
       "name": "Joseph Montanez",
@@ -10,7 +10,7 @@
     }
   ],
   "require": {
-    "php": ">=5.6.0",
+    "php": ">=5.5.9",
     "codeception/codeception": "2.2.0-beta"
   },
   "require-dev": {
