--- a/composer.json
+++ b/composer.json
@@ -6,15 +6,15 @@
   "authors": [
     {
       "name": "Joseph Montanez",
-      "email": "jm@shabb.com"
+      "email": "sutabi@gmail.com"
     }
   ],
   "require": {
-    "php": ">=5.5.9",
-    "codeception/codeception": "2.2.0-beta"
+    "php": ">=5.5.9"
   },
   "require-dev": {
-    "phpunit/phpunit": "4.*"
+    "codeception/codeception": "2.2.8",
+    "phpunit/phpunit": ">4.8.20 <6.0"
   },
   "autoload": {
     "psr-4": {
