--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
     "php": ">=5.5.9"
   },
   "require-dev": {
-    "codeception/codeception": "2.2.8",
-    "phpunit/phpunit": ">4.8.20 <6.0"
+    "codeception/codeception": "2.2.8"
   },
   "autoload": {
     "psr-4": {
