--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,10 @@
   ],
   "require": {
     "php": ">=5.5.9",
-    "symfony/event-dispatcher": "3.2.x-dev"
+    "symfony/event-dispatcher": "3.4.9"
   },
   "require-dev": {
-    "codeception/codeception": "2.4.1"
+    "codeception/codeception": "2.3.9"
   },
   "autoload": {
     "psr-4": {
