--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,10 @@
     "symfony/event-dispatcher": "3.4.9"
   },
   "require-dev": {
-    "codeception/codeception": "2.3.9"
+    "codeception/codeception": "2.3.9",
+    "phpstan/phpstan": "0.9.2",
+    "phpmd/phpmd": "2.6.0",
+    "phpmetrics/phpmetrics": "2.3.2"
   },
   "autoload": {
     "psr-4": {
