--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,7 +1,7 @@
 Babel==2.3.4
 Jinja2==2.9.5
 MarkupSafe==0.23
-PyYAML==3.12
+pyyaml>=4.2b1
 Pygments==2.2.0
 Sphinx==1.5.2
 alabaster==0.7.9
@@ -16,7 +16,7 @@ livereload==2.5.1
 pathtools==0.1.2
 port-for==0.3.1
 pytz==2016.10
-requests==2.13.0
+requests>=2.20.0
 singledispatch==3.4.0.3
 six==1.10.0
 snowballstemmer==1.2.1
