--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,14 @@
     "codeception/codeception": "5.*",
     "phpstan/phpstan": "1.4.10",
     "phpmd/phpmd": "2.11.1",
-    "phpmetrics/phpmetrics": "2.7.4"
+    "phpmetrics/phpmetrics": "2.7.4",
+    "codeception/module-phpbrowser": "dev-master",
+    "codeception/module-asserts": "dev-master"
   },
   "autoload": {
     "psr-4": {
-      "CartLoad\\": "src/CartLoad"
+      "CartLoad\\": "src/CartLoad",
+      "CartLoad\\Tests\\": "tests"
     }
   },
   "scripts": {
