--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,3 +4,5 @@ services:
       dockerfile: docker/php80/Dockerfile
     volumes:
       - ./:/var/www/html
+      - ./docker/php80/conf.d/xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+      - ./docker/php80/conf.d/error_reporting.ini:/usr/local/etc/php/conf.d/error_reporting.ini
