--- a/docker/php80/Dockerfile
+++ b/docker/php80/Dockerfile
@@ -1,3 +1,8 @@
 FROM php:8.0-fpm-alpine
 
+RUN apk add autoconf automake make gcc g++ libtool pkgconfig
+
+RUN pecl install xdebug \
+    && docker-php-ext-enable xdebug
+
 COPY --from=composer:latest /usr/bin/composer /usr/local/bin/composer
